<resources>
    <string name="app_name">Matrix calculator</string>
    <string name="plus">A + B</string>
    <string name="minus">A - B</string>
    <string name="result">Result</string>
    <string name="_0">0</string>
    <string name="transpose">Transpose</string>
    <string name="Matrix_A">Matrix A</string>
    <string name="Matrix_B">Matrix B</string>
    <string name="next_matrix">Next matrix</string>
    <string name="determinant">Determinant</string>
    <string name="multiply">A * B</string>
    <string name="rows">Rows: 6</string>
    <string name="columns">Columns: 6</string>
</resources>